@@ -21,26 +21,41 @@ in lang2dict.txt:
 
 
 This will create a subdirectory "check_${TODAY}" containing various
-files.
+files organized as described later in this document.
 
 check_dit.sh 
 	Usage: check_dit <lang> <aspell-suffix> <D-I repository> <out dir>
 
 	is the "heart" of the project: it spell checks one single language of
 	installer and writes the results inside an output dir.
+
+	      <out dir>
+		|
+		|----nozip
+		|     |
+		|     ${LANG}.po
+		|
+		|----zip
+		|     |	
+		|     ${LANG}_all.txt
+		|     ${LANG}_unkn_wl.txt
+		|
+		graph.png
+		stats.txt
+
 	Optional word lists are expected to be found in the "wls" subdir
 
 check_all.sh
 	Usage: check_all.sh
 
 	this is the top-level scripts that loops through the languages and
-	creates a png graph, a table in text and HTML formats
+	creates a png graph and a table in text format containing statistics
+	for all the languages checked.
 
 lang2dict.txt
 	contains the language code to aspell-suffix conversion:
-	it is used for 
+	it is used for exemple in these cases
 	"pt_BR" --> "pt-br"
-	"nb" --> "no"
 	"uk" --> "ukr"
 	
 msgstr_extract.awk
