@@ -1,3 +1,9 @@
+2005-01-14  Davide Viti  <zinosat@tiscali.it>
+
+	* README updated with latest changes
+
+	* diff_stats.sh added to make it easier to track differences between different runs
+
 2005-01-12  Davide Viti  <zinosat@tiscali.it>
 
 	* build_index.sh was added in order to build "index.html" everytime "l10n-spellcheck.sh" is run
